# FreeCAD-MCP

./: InitGui.py  README.md  freecad_mcp_client.py  freecad_mcp_server.py  package.xml  pyproject.toml
src/: freecad_mcp_client.py
